update of global default from setting

--- a/desktop/index.html
+++ b/desktop/index.html
@@ -71,9 +71,10 @@
           
 
       <default-display ref="defaultDisplay"
-        :value="ddFormat"
+        v-model="ddFormat"
         :title="ddTitle"
         :location="ddLocation"
+        @input="saveDefault"
       ></default-display>
         
       <md-guide ref="markdownGuide"></md-guide>
