shorten display of directory for each note

--- a/desktop/index.html
+++ b/desktop/index.html
@@ -63,6 +63,7 @@
         :note-location="noteLocation"
         @toggle-markdownguide="$refs.markdownGuide.toggle()"
         @toggle-dirchooser="$refs.dirChooser.toggle()"
+        @open-dir="openDirectory"
         @remove-dir="removeDirectory"
         @set-local="setLocal"
         @set-remote="setRemote"
