load all file content when added directory

--- a/desktop/index.html
+++ b/desktop/index.html
@@ -36,7 +36,7 @@
           :note-location="noteLocation"
           :note-list="noteList"
           :opened-dir="openedDir"
-          @open-local-file="openLocalFile"
+          @open-file="openFile"
           @add-opened-dir="$refs.dirChooser.toggle()"
           @create-local-note="createLocalNote"
           @delete-local-notes="deleteLocalNotes"
