--- a/desktop/index.html
+++ b/desktop/index.html
@@ -28,6 +28,7 @@
         :note-location="noteLocation"
         :stat="stat"
         @toggle-sidebar="$refs.sidebar.toggle()"
+        @reload="noteList.updateLocal()"
       ></navbar>
 
       <div class="content" id="note-list-and-display">
