add function to close a note pane on demand

--- a/desktop/index.html
+++ b/desktop/index.html
@@ -56,6 +56,7 @@
           @set-default="setDefault"
           @set-global-default="setGlobalDefault"
           @archive="archive"
+          @close-note="closeNote"
         ></note-container>
       </div>
 
