--- a/desktop/index.html
+++ b/desktop/index.html
@@ -94,10 +94,15 @@
       <list-display ref="archive"
         header-text="Archive"
         :list="archiveList"
-        :actions="[{action: 'delete', display: 'Delete'}, {action: 'unarchive', display: 'Unarchive'}]"
+        :actions="archiveListActions"
         @delete="deleteArchive"
         @unarchive="unarchive"
+        @view="viewArchive"
       ></list-display>
+
+      <minimal-note-display ref="minimalNote"
+        :data="noteInMinimal"
+      ></minimal-note-display>
         
       <md-guide ref="markdownGuide"></md-guide>
       
