add function to archive multiple notes

--- a/desktop/index.html
+++ b/desktop/index.html
@@ -41,6 +41,7 @@
           @add-opened-dir="$refs.dirChooser.toggle()"
           @create-local-note="createLocalNote"
           @delete-local-notes="deleteLocalNotes"
+          @archive-local-notes="archiveLocalNotes"
         ></list-container>
         
         <note-container ref="noteContainer"
