delete individual note in note container panel

--- a/desktop/index.html
+++ b/desktop/index.html
@@ -57,6 +57,7 @@
           @set-default="setDefault"
           @set-global-default="setGlobalDefault"
           @archive="archive"
+          @delete-note="deleteNote"
           @close-note="closeNote"
         ></note-container>
       </div>
