add function to remove remote note

--- a/desktop/index.html
+++ b/desktop/index.html
@@ -40,7 +40,7 @@
           @open-file="openFile"
           @add-opened-dir="$refs.dirChooser.toggle()"
           @create-note="createNote"
-          @delete-local-notes="deleteLocalNotes"
+          @delete-notes="deleteNotes"
           @archive-local-notes="archiveLocalNotes"
           @sort-notes="sortNotes"
         ></list-container>
