add function to archive remote notes

--- a/desktop/index.html
+++ b/desktop/index.html
@@ -41,7 +41,7 @@
           @add-opened-dir="$refs.dirChooser.toggle()"
           @create-note="createNote"
           @delete-notes="deleteNotes"
-          @archive-local-notes="archiveLocalNotes"
+          @archive-notes="archiveNotes"
           @sort-notes="sortNotes"
         ></list-container>
         
