add function for remote defaults

--- a/desktop/index.html
+++ b/desktop/index.html
@@ -77,6 +77,7 @@
         @show-remote-archive="showRemoteArchive"
         @show-global-default="showGlobalDefault"
         @show-dir-default="showDirDefault"
+        @show-remote-default="showRemoteDefault"
         @sign-in-google="signInGoogle"
         @sign-out-google="signOutGoogle"
       ></sidebar>
