--- a/desktop/index.html
+++ b/desktop/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <script src="http://localhost:8098"></script>
+    <!-- <script src="http://localhost:8098"></script> -->
     <title>MaNote</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
