show blocking loading screen when necessary

--- a/desktop/index.html
+++ b/desktop/index.html
@@ -127,7 +127,7 @@
         @authenticate="authenticate"
       ></sign-in-ui>
 
-      <modal-loading :show="stat.running && stat.atInit"></modal-loading>
+      <modal-loading :show="stat.running && stat.block"></modal-loading>
 
     </div>
     <!-- <script src="js/emoji.js"></script> -->
