use frameless window

--- a/desktop/index.html
+++ b/desktop/index.html
@@ -29,6 +29,7 @@
         :stat="stat"
         @toggle-sidebar="$refs.sidebar.toggle()"
         @reload="reload"
+        @close-win="closeWin"
       ></navbar>
 
       <div class="content" id="note-list-and-display">
